--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,9 @@
 name = "symba"
 version = "0.1.0"
 edition = "2021"
+authors = ["Zahash <zahash.z@gmail.com>"]
+description = "Computer Algebra System written in Rust."
+license = "MIT"
+repository = "https://github.com/zahash/symba"
 
 [dependencies]
